--- a/MM004.ipynb
+++ b/MM004.ipynb
@@ -3078,10 +3078,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('MM Data - PartnersWithLatLongNewLabel.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
